docs: user feature
