# internal/handlers/user/user.go
@@ -1,10 +1,13 @@
 package userhandler
 
 import (
+	"errors"
+
 	userdomain "github.com/codepnw/blog-api/internal/domains/user"
 	"github.com/codepnw/blog-api/internal/handlers"
 	"github.com/codepnw/blog-api/internal/middleware"
 	userusecase "github.com/codepnw/blog-api/internal/usecases/user"
+	"github.com/codepnw/blog-api/internal/utils/errs"
 	"github.com/codepnw/blog-api/internal/utils/validate"
 	"github.com/gofiber/fiber/v2"
 )
@@ -17,6 +20,17 @@ func NewUserHandler(uc userusecase.Usecase) *handler {
 	return &handler{uc: uc}
 }
 
+// Create User
+// @Summary Create User
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param data body userhandler.UserCreateReq true "User data"
+// @Success 201 {object} userdomain.User
+// @Failure 400 {object} handlers.BadRequestRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /users [post]
 func (h *handler) CreateUser(ctx *fiber.Ctx) error {
 	req := new(UserCreateReq)
 	if err := ctx.BodyParser(req); err != nil {
@@ -40,17 +54,41 @@ func (h *handler) CreateUser(ctx *fiber.Ctx) error {
 	return handlers.Created(ctx, result)
 }
 
+// Get User ID
+// @Summary Get User ID
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param user_id path string true "User ID"
+// @Success 200 {object} userdomain.User
+// @Failure 404 {object} handlers.NotFoundRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /users/{user_id} [get]
 func (h *handler) GetUser(ctx *fiber.Ctx) error {
 	id := ctx.Params(handlers.ParamKeyUserID)
 
 	result, err := h.uc.GetUser(ctx.Context(), id)
 	if err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return handlers.NotFound(ctx, err.Error())
+		}
 		return handlers.InternalServerError(ctx, err)
 	}
 
 	return handlers.Success(ctx, result)
 }
 
+// Get Profile User
+// @Summary Get Profile User
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} userdomain.User
+// @Failure 404 {object} handlers.NotFoundRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /users/me [get]
 func (h *handler) GetProfile(ctx *fiber.Ctx) error {
 	user, err := middleware.GetCurrentUser(ctx)
 	if err != nil {
@@ -59,12 +97,24 @@ func (h *handler) GetProfile(ctx *fiber.Ctx) error {
 
 	result, err := h.uc.GetUser(ctx.Context(), user.ID)
 	if err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return handlers.NotFound(ctx, err.Error())
+		}
 		return handlers.InternalServerError(ctx, err)
 	}
 
 	return handlers.Success(ctx, result)
 }
 
+// Get All User
+// @Summary Get All User
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {array} []userdomain.User
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /users [get]
 func (h *handler) GetAllUsers(ctx *fiber.Ctx) error {
 	result, err := h.uc.GetAllUsers(ctx.Context())
 	if err != nil {
@@ -74,6 +124,19 @@ func (h *handler) GetAllUsers(ctx *fiber.Ctx) error {
 	return handlers.Success(ctx, result)
 }
 
+// Update User
+// @Summary Update User
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param user_id path string true "User ID"
+// @Param data body userhandler.UserUpdateReq true "User data"
+// @Success 200 {object} userdomain.User
+// @Failure 400 {object} handlers.BadRequestRes
+// @Failure 404 {object} handlers.NotFoundRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /users/{user_id} [patch]
 func (h *handler) UpdateUser(ctx *fiber.Ctx) error {
 	id := ctx.Params(handlers.ParamKeyUserID)
 
@@ -96,16 +159,33 @@ func (h *handler) UpdateUser(ctx *fiber.Ctx) error {
 
 	result, err := h.uc.UpdateUser(ctx.Context(), input)
 	if err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return handlers.NotFound(ctx, err.Error())
+		}
 		return handlers.InternalServerError(ctx, err)
 	}
 
 	return handlers.Success(ctx, result)
 }
 
+// Delete User
+// @Summary Delete User
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param user_id path string true "User ID"
+// @Success 200 {object} userdomain.User
+// @Failure 404 {object} handlers.NotFoundRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /users/{user_id} [delete]
 func (h *handler) DeleteUser(ctx *fiber.Ctx) error {
 	id := ctx.Params(handlers.ParamKeyUserID)
 
 	if err := h.uc.DeleteUser(ctx.Context(), id); err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return handlers.NotFound(ctx, err.Error())
+		}
 		return handlers.InternalServerError(ctx, err)
 	}
 	return handlers.NoContent(ctx)
@@ -113,6 +193,16 @@ func (h *handler) DeleteUser(ctx *fiber.Ctx) error {
 
 // ---- Auth ------
 
+// Auth Register
+// @Summary Auth Register
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param data body userhandler.UserCreateReq true "Register data"
+// @Success 201 {object} userusecase.AuthResponse
+// @Failure 400 {object} handlers.BadRequestRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /auth/register [post]
 func (h *handler) Register(ctx *fiber.Ctx) error {
 	req := new(UserCreateReq)
 	if err := ctx.BodyParser(req); err != nil {
@@ -136,6 +226,16 @@ func (h *handler) Register(ctx *fiber.Ctx) error {
 	return handlers.Created(ctx, response)
 }
 
+// Auth Login
+// @Summary Auth Login
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param data body userhandler.UserLoginReq true "Login data"
+// @Success 200 {object} userusecase.AuthResponse
+// @Failure 400 {object} handlers.BadRequestRes
+// @Failure 500 {object} handlers.InternalServerErrRes
+// @Router /auth/login [post]
 func (h *handler) Login(ctx *fiber.Ctx) error {
 	req := new(UserLoginReq)
 	if err := ctx.BodyParser(req); err != nil {
